# playground_camera_model

./: .gitignore  .gitmodules  README.md
cpp/: .gitignore
cpp/basic_camera_model/: CMakeLists.txt
cpp/extended_camera_model/: CMakeLists.txt
cpp/extended_camera_model/apps/playground_camera_model/: main.cc
cpp/extended_camera_model/libs/playground_camera_model/core/: CMakeLists.txt  GraphicsEngine.cc  GraphicsEngine.h  homogeneous_transformation_matrix.cc  homogeneous_transformation_matrix.h  window.cpp  window.h
cpp/extended_camera_model/libs/playground_camera_model/core/Camera/: CameraModel.cc  CameraModel.h
cpp/extended_camera_model/libs/playground_camera_model/core/ClippingSpace/: ClippingSpace.cc  ClippingSpace.h
cpp/extended_camera_model/libs/playground_camera_model/core/Color/: Color.cc  Color.h
cpp/extended_camera_model/libs/playground_camera_model/core/FPSCounter/: FPSCounter.cc  FPSCounter.cpp  FPSCounter.h
cpp/extended_camera_model/libs/playground_camera_model/core/Matrix/: HomogenousTransformationMatrix.cc  HomogenousTransformationMatrix.h
cpp/extended_camera_model/libs/playground_camera_model/core/Shape/: Shape.cc  Shape.h
cpp/extended_camera_model/libs/playground_camera_model/core/Vector/: Vectors.cc  Vectors.h
cpp/extended_camera_model/libs/playground_camera_model/core/Window/: Window.cc  Window.h
python/: main.py
python/cube_tracker/: tracker.py
python/extended_camera_model/: main.py
python/extended_camera_model/frontend/: main.qml
python/playground_camera_model/: clipping_space.py  cube.py
(+34 files in other folders)
